bug: toggles offset value from bottom depending on if data preview banner is visible
data preview banner is visible when user can edit data

--- a/corehq/apps/hqwebapp/static/cloudcare/less/formplayer-webapp/form.less
+++ b/corehq/apps/hqwebapp/static/cloudcare/less/formplayer-webapp/form.less
@@ -31,7 +31,7 @@
     padding-top: 10px;
     padding-bottom: 10px;
     position: fixed;
-    bottom: 30px; // data preview bar
+    bottom: 0px; // data preview bar
     left: 0;
     z-index: @zindex-formplayer-anchored-submit;
   }
